# chemical-data-explorer

./: Descriptors.xlsx  Odleglosc_euklidesowa.xlsx  Odleglosc_manhattan.xlsx  README.md  Smiles_codes.xlsx  hca.ipynb  pyproject.toml  smiles.ipynb
HCA/: Odleglosc_manhattan.xlsx  Smiles_codes.xlsx  dane_autoskalowane.xlsx  smiles.ipynb
HCA/sprawozdanie/: sprawozdanie_HCA.fdb_latexmk  sprawozdanie_HCA.fls  sprawozdanie_HCA.tex
PCA/: cor_matrix.csv  cor_matrix.xlsx  pca.ipynb  pca2_1.jpg:Zone.Identifier  pca2_2.jpg:Zone.Identifier
PCA/sprawko/: PCA.aux  PCA.fdb_latexmk  PCA.fls  PCA.out  PCA.tex  PCA.toc
PCA/sprawozdanie/: PCA.aux  PCA.fdb_latexmk  PCA.fls  PCA.out  PCA.tex  PCA.toc
sprawozdanie/: sprawozdanie_HCA.aux  sprawozdanie_HCA.out  sprawozdanie_HCA.toc
