[project]
name = "chemical-data-explorer"
version = "0.1.0"
description = "Advanced data exploration techniques applied to chemical compounds dataset using multivariate statistical methods"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rdkit==2023.09.5",
    "scipy==1.12.0",
    "pandas==2.1.3",
    "matplotlib==3.8.2",
    "numpy>=1.24.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "openpyxl>=3.1.0",
]

[project.urls]
"Homepage" = "https://github.com/Kubabob/techniki_eksploracji_danych"
"Bug Tracker" = "https://github.com/Kubabob/techniki_eksploracji_danych/issues"
